crates/ruff_db/src/diagnostic/render/snapshots/ruff_db__diagnostic__render__full__tests__output.snap
---
source: crates/ruff_db/src/diagnostic/render/full.rs
expression: env.render_diagnostics(&diagnostics)
---
error[unused-import]: `os` imported but unused
 --> fib.py:1:8
  |
1 | import os
  |        ^^ Remove unused import: `os`
  |

error[unused-variable]: Local variable `x` is assigned to but never used
 --> fib.py:6:5
  |
4 | def fibonacci(n):
5 |     """Compute the nth number in the Fibonacci sequence."""
6 |     x = 1
  |     ^ Remove assignment to unused variable `x`
7 |     if n == 0:
8 |         return 0
  |

error[undefined-name]: Undefined name `a`
 --> undef.py:1:4
  |
1 | if a == 1: pass
  |    ^
  |
